--- a/frontend/src/reset.css
+++ b/frontend/src/reset.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 @import "@fontsource-variable/open-sans";
+@import "tailwindcss";
+
 /*
 
   Con este reset vamos a resolver:
@@ -38,27 +40,7 @@
 }
 
 /* Reseteamos los margin y paddings de todas las etiquetas */
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  vertical-align: baseline;
-}
 
-/* Evitamos problemas con las imagenes */
-img, picture, video, iframe, figure {
-  max-width: 100%;
-  width: 100%;
-  display: block;
-  /* opcional */
-  -o-object-fit: cover;
-     object-fit: cover;
-  /* opcional */
-  -o-object-position: center center;
-     object-position: center center;
-}
 
 /* Reseteamos los enlaces para funcionar como cajas... */
 a {
@@ -83,14 +65,6 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Desactivamos estilos por defecto de las principales etiquetas de texto */
-h1, h2, h3, h4, h5, h6, p, span, a, strong, blockquote, i, b, u, em {
-  font-size: 1em;
-  font-weight: inherit;
-  font-style: inherit;
-  text-decoration: none;
-  color: inherit;
-}
 
 /* Evitamos problemas con los pseudoelementos de quotes */
 blockquote:before, blockquote:after, q:before, q:after {
@@ -108,40 +82,9 @@ blockquote:before, blockquote:after, q:before, q:after {
   color: var(--blanco);
 }
 
-/* Nivelamos problemas de tipografías y colocación de formularios */
-form, input, textarea, select, button, label {
-  font-family: inherit;
-  font-size: inherit;
-  -webkit-hyphens: auto;
-      -ms-hyphens: auto;
-          hyphens: auto;
-  background-color: transparent;
-  color: inherit;
-  display: block;
-  /* opcional */
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-}
 
-/* Reseteamos las tablas */
-table, tr, td {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
 
-/* Evitamos problemas con los SVG */
-svg {
-  /* width: 100%; */
-  display: block;
-  /* fill: currentColor; */
-}
 
-/* (Probándolo, no usar en producción) En el caso de añadir una  */
-/* p svg{
-  display: inline;
-  width: initial;
-} */
 /* Configuramos la tipografía para toda la web */
 body {
   min-height: 100vh;
